# SMI_Django

./: .dockerignore  Dockerfile  manage.py  pyproject.toml  requirements.txt
SMI_Django/: asgi.py  settings.py  urls.py  wsgi.py
django_smi/: asgi.py  settings.py  urls.py  wsgi.py
posts/: admin.py  models.py  serializer.py  urls.py  views.py
posts/migrations/: 0001_initial.py
users/: models.py
users/migrations/: 0001_initial.py  0002_customuser_groups_customuser_user_permissions.py
